--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.0",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
+    "react-debounce-input": "^3.2.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
